# hera_pipelines

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run-season.py
pipelines/calamity/dpss_calibrate/: dpss_calibrate.toml  dpss_calibrate_core.toml  dpss_calibrate_hex1.toml  dpss_calibrate_hex2.toml  dpss_calibrate_jonnie.toml
pipelines/calamity/lstbin/: calamity_lstbin_all_epochs.toml  calamity_lstbin_all_epochs_15sec.toml  calamity_lstbin_epoch_0.toml  calamity_lstbin_epoch_1.toml  calamity_lstbin_epoch_2.toml
pipelines/calamity/stage_data/: stage_data.toml  stage_data_ilifu.toml
pipelines/h4c/gain_jumps/: calibrate_gain_jumps.toml
pipelines/h4c/idr2.3/: h4c_idr3.yml
pipelines/h4c/misc/: backup_h4c.sh
pipelines/h6c/: analysis
pipelines/h6c/analysis/: H6C_Analysis.graffle  h6c.yml  h6c_analysis.toml  h6c_idr2.yml
pipelines/validation/h1c_idr3_2/: build_h1c_idr3_abscal_model.toml  epoch_clean_up.sh  h1c_idr3_v2_validation.toml  make_eor_only_files.toml  repo_git_hashes.txt
pipelines/validation/h4c/: build_h1c_idr3_abscal_model.toml  make_bad_ants_file.py  make_eor_only_files.toml  make_placeholder_files.sh  (+1 more)
scripts/: extract_autos_post_lstbin.py
src/hera_pipelines/: __init__.py  async_utils.py  cli.py  librarian_utils.py  mf_utils.py  repo_management.py  seasons.py
utils/: fix_autos.sh  make_beam_hera_pspec_compatible.py  stage_data.sh  throw_away_flagged_antennas.py  throw_away_flagged_antennas.sh  throw_away_flagged_antennas_cal.py  throw_away_flagged_antennas_cal.sh  upload_gdrive.py  uploader.py
(+1875 files in other folders)
